# cookiecutter-pypackage

./: README.md  cookiecutter.json  requirements_dev.txt  setup.py
.github/workflows/: build-pipeline.yml
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  requirements_dev.txt
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.py
